<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/firstname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/firstname"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_confirmation_number_24"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/email2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnknownId" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/loginpassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/number"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/repaitpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="492dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/repait_passwoed"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/register"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/number"
        app:layout_constraintEnd_toEndOf="@+id/lastname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastname"
        app:layout_constraintTop_toBottomOf="@+id/lastname"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>