<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity2">

    <EditText
        android:id="@+id/email"
        android:layout_width="314dp"
        android:layout_height="51dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/loginemail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="313dp"
        android:layout_height="52dp"
        android:layout_marginBottom="336dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/loginpassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/loginmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:text="@string/signin"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/login"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="-8dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>